--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         
         #app {
             height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            position: relative;
         }
     </style>
 </head>
